<resources>
    <string name="app_name">PoputkaKG</string>
    <string name="profile">Профиль</string>
    <string name="profile_name">Имя</string>
    <string name="profile_phone">Номер телефона</string>
    <string name="profile_city">Город</string>
    <string name="your_rating">Ваш\n рейтинг</string>
    <string name="enter_login">Вход</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="signing_up">Регистрация</string>
    <string name="driver">Водитель</string>
    <string name="passenger">Пассажир</string>
    <string name="usage_police"><u>Политика использования приложения</u></string>
    <string name="i_am_agree">Ознакомлен и принимаю</string>
    <string name="map">Карта</string>
    <string name="offers">Предложения</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="settings">Настройки</string>
    <string name="support">Поддержка</string>
    <string name="about_app">О приложении</string>
    <string name="request_setting_permissions">Вы отключили некоторые разрешения, включите их в настройках</string>
    <string name="fill_fields">Заполните все поля</string>
    <string name="check_sms">Проверить код</string>
    <string name="checking_sms">Проверка SMS кода</string>
    <string name="error_login">Номер или пароль неверный</string>
    <string name="success_login">Вы успешно вошли</string>
    <string name="type_phone_number">Номер(9 цифр)</string>
    <string name="type_password">Пароль</string>

    <string name="error">Ошибка</string>
    <string name="turn_on_internet">Включите интернет</string>
    <string name="credit_story">Кредитная история</string>
    <string name="drive_amount">Количество поездок</string>

    <string name="enter_place">Введите адрес</string>
    <string name="log_out">Выйти</string>
    <string name="driver_form">Форма - <i>Водитель</i></string>
    <string name="set_up_from_point">Укажите точку отправки:</string>
    <string name="start_street">Начальная улица</string>
    <string name="start_adress">Адрес начала</string>
    <string name="set_up_to_point">Укажите точку назначения:</string>
    <string name="end_adress">Адрес конца</string>
    <string name="suggest">Предложить</string>
    <string name="desription">Описание:</string>
    <string name="add_desc">Добавить описание</string>
    <string name="add_amount_of_free_spaces">Введите количество</string>
    <string name="free_spaces_amount">Количество свободных мест:</string>
    <string name="inter_city_trip">Межгород</string>
    <string name="inside_trip">Внутренняя\n поездка</string>
    <string name="enter_descrip">Добавьте описание</string>
    <string name="set_address">Сохранить адрес</string>
    <string name="turn_on_gps">Включите GPS</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="error_phone_length">Номер должен состоять из 9 цифр</string>


    <string name="success">Успешно прошло</string>
    <string name="loading">Загрузка...</string>
    <string name="sms_code">Введите СМС-код</string>
    <string name="filter_from_all">Всех</string>
    <string name="filter">Загрузить</string>
    <string name="filter_from_drivers">Только водителей</string>
    <string name="filter_from_riders">Только пассажиров</string>
    <string name="filter_from_suggestions">Предложения системы</string>
    <string name="test">Тестинг</string>
    <string name="rout_goal">Цель поездки</string>
    <string name="read_license">Пожалуйста прочитайте политику использования приложения</string>
    <string name="ask_sure_logout">Вы действительно хотите выйти?</string>
    <string name="channel_name">notification</string>
    <string name="spinnerText">Город</string>
    <string name="wrong_nubmber_or_login">Неверно указан номер телефона или пароль</string>
    <string name="restore_text">Восстановление\nПароля</string>
    <string name="restore_text2">Пароля</string>
    <string name="restore_hint">Введите ваш номер телефона</string>
    <string name="send_code">Отправить код</string>
    <string name="driver_endAdress_text">Укажите не менее 5 точек назначения:</string>
    <string name="additional_address">Дополнительные пункты прибытия</string>
    <string name="additional_hint_address">Дополнительные точки</string>
    <string name="time">Время:</string>
    <string name="from">Откуда:</string>
    <string name="to">Куда:</string>
    <string name="btnDeal">Сделка</string>
    <string name="btnChat">Чат</string>
    <string name="suggestion">Предложения</string>
    <string name="common">Общие</string>
    <string name="my">Мои</string>
    <string name="outgoing">Отправленные</string>
    <string name="incoming">Полученные</string>
    <string name="exit">Выйти</string>
    <string name="save_changes">Сохранить Изменения</string>
    <string name="show_path">Просмотреть маршрут</string>
    <string name="deal">Сделка</string>
    <string name="btnCall">Звонок</string>
    <string name="created">Созданные</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>


</resources>
