<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:icon="@drawable/map"
            android:id="@+id/navItemImageMap"
            android:title="@string/map" />
        <item
            android:icon="@drawable/suggestion"
            android:id="@+id/navItemSuggestion"
            android:title="@string/offers" />
        <item
            android:id="@+id/navItemSupport"
            android:title="@string/support" />


    </group>
    <group android:id="@+id/group_exit">
        <item
            android:id="@+id/navItemLogOut"
            android:title="@string/log_out" />
    </group>
</menu>