<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="87dp"
                android:layout_height="93dp"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                app:srcCompat="@mipmap/ic_launcher" />
            <TextView
                android:layout_marginTop="@dimen/margin_32"
                android:id="@+id/tvWrongNumber"
                android:text="@string/wrong_nubmber_or_login"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/red"
                android:textSize="@dimen/text_12sp"/>

            <EditText
                android:layout_marginTop="64dp"
                android:layout_marginLeft="@dimen/margin_32"
                android:layout_marginRight="@dimen/margin_32"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="number"
                android:maxLength="9"
                android:textSize="@dimen/text_14sp"
                android:id="@+id/etPhoneLogin"
                style="@style/StyledEditText"
                android:hint="@string/type_phone_number"
                tools:ignore="TextFields" />

            <EditText

                android:layout_marginLeft="@dimen/margin_32"
                android:layout_marginRight="@dimen/margin_32"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textPassword"
                android:textSize="@dimen/text_14sp"
                android:id="@+id/etPassWordLogin"
                style="@style/StyledEditText"
                android:hint="@string/type_password"/>

            <Button
                android:id="@+id/btnEnterLogin"
                android:layout_width="150dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_12sp"
                android:background="@drawable/bg_round"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/enter_login" />

            <TextView
                android:layout_marginLeft="@dimen/margin_32"
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_18sp"
                />

            <Button
                android:id="@+id/btnGoToSignUp"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/signing_up"
                android:layout_marginRight="@dimen/margin_32"
                android:layout_marginLeft="@dimen/margin_32"
                android:background="@drawable/bg_round_gray"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>

