<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:background="@drawable/bg_round_32dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_8">

            <TextView
                android:id="@+id/tvFormClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_28sp"
                tools:text="@string/driver_form" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inside_trip"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16sp" />

                <Switch
                    android:id="@+id/switchRout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inter_city_trip"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/set_up_from_point"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/ivStartAddressPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:src="@drawable/ic_map_to" />


            <TextView
                android:id="@+id/tvStartAddressPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/start_adress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:background="@drawable/bg_round"
                android:backgroundTint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/set_up_to_point"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/ivEndAddressPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:src="@drawable/ic_map_from" />


            <TextView
                android:id="@+id/tvEndAddressPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/end_adress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:background="@drawable/bg_round"
                android:backgroundTint="@color/white" />

            <LinearLayout
                android:id="@+id/layoutDriverPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/free_spaces_amount"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/etSpaceAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@null"
                    android:hint="@string/add_amount_of_free_spaces"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lightGray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:background="@drawable/bg_round"
                    android:backgroundTint="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRiderPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/rout_goal"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkboxIsBag"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:button="@drawable/checkbox_selector_is_bag" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkboxIsMan"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:button="@drawable/checkbox_selector_is_man"
                            android:checked="true" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/desription"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etRoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@null"
                android:hint="@string/add_desc"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:background="@drawable/bg_round"
                android:backgroundTint="@color/white" />

            <Button
                android:id="@+id/btnSendOffer"
                style="@style/StyledButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:backgroundTint="@color/white"
                android:text="@string/suggest"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>