<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/padding_32"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/restore_text"
                android:textSize="@dimen/margin_32"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:hint="@string/profile_phone">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_alignParentBottom="true"
                style="@style/StyledButton"
                android:text="@string/send_code"
                android:textColor="@color/white" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>