<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_12"
            android:id="@+id/imgArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow"
            android:layout_marginLeft="@dimen/margin_12" />

        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_logo_white_round" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginRight="@dimen/margin_12"
            android:id="@+id/imgProfile"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <TextView
        android:layout_margin="@dimen/margin_12"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/suggestion"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/lightGray"
        android:id="@+id/tvCommon"
        android:gravity="center_horizontal"
        android:text="@string/common"
        android:textSize="@dimen/text_18sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
        <View
            android:background="@drawable/bg_round_gray"
            android:layout_width="3dp"
            android:layout_height="34dp"/>
        <TextView
            android:textColor="@color/colorAccent"
            android:id="@+id/tvMy"
            android:gravity="center_horizontal"
            android:text="@string/my"
            android:textSize="@dimen/text_18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_gravity="center_horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem ="@layout/item_suggestion"
        android:layout_width="match_parent"
        android:layout_margin="18dp"
        android:layout_height="wrap_content"/>
        <android.support.v7.widget.CardView
            android:id='@+id/filter'
            android:visibility="gone"
            android:layout_marginBottom="64dp"
            android:background="@drawable/bg_round_15dp_white"
            android:layout_marginLeft="@dimen/margin_32"
            android:layout_alignBottom="@id/iwFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32">
            <LinearLayout
                android:padding="@dimen/padding_16"
                android:layout_width="180dp"
                android:orientation="vertical"
                android:layout_height="120dp">
                <TextView
                    android:textColor="@color/gray_solid"
                    android:textSize="@dimen/text_14sp"
                    android:id="@+id/tvOutgoing"
                    android:text="@string/outgoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/gray_solid"
                    android:layout_marginTop="@dimen/margin_12"
                    android:textSize="@dimen/text_14sp"
                    android:id="@+id/tvIncoming"
                    android:text="@string/incoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/gray_solid"
                    android:layout_marginTop="@dimen/margin_12"
                    android:textSize="@dimen/text_14sp"
                    android:id="@+id/tvCreated"
                    android:text="@string/created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    <ImageView
        android:layout_alignParentBottom="true"
        android:id="@+id/iwFilter"
        android:src="@drawable/ic_filter"
        android:layout_margin="@dimen/margin_32"
        android:layout_width="60dp"
        android:layout_height="60dp" />
    </RelativeLayout>

</LinearLayout>



